Updated vendor name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tustin/psn-php",
+    "name": "iroquisan0n/psn-php",
     "license": "MIT",
     "description": "PHP wrapper for the PlayStation API.",
     "homepage": "https://github.com/Tustin/psn-php",
